--- a/backend/AstroGlow/src/main/resources/application.properties
+++ b/backend/AstroGlow/src/main/resources/application.properties
@@ -1,17 +1,17 @@
-#Setup JDBC connection ? this is a comment
-spring.datasource.url=jdbc:mysql://localhost:3306/dbastroglow
-
-#Setup datasource driver ? this is a comment
+# application.properties
+spring.datasource.url=jdbc:mysql://localhost:3306/dbastroglow?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-#Setup database login credentials ? this is a comment.
 spring.datasource.username=root
 spring.datasource.password=password
 
-#Auto create tables based on entities ? this is a comment
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.format_sql=true
 
-#for stack trace error not to appear ? this is a comment
+# Added to help diagnose entity scanning issues
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.springframework.orm.jpa=DEBUG
+
 server.error.include-stacktrace=never
- 
