--- a/frontend_web/astro/package.json
+++ b/frontend_web/astro/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
+    "@popperjs/core": "^2.11.8",
     "@tailwindcss/vite": "^4.0.8",
     "bootstrap": "^5.3.3",
     "lucide-react": "^0.475.0",
@@ -31,6 +32,7 @@
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
     "postcss": "^8.5.3",
+    "sass": "^1.86.0",
     "tailwindcss": "^4.0.8",
     "vite": "^6.1.0"
   }
