--- a/frontend_web/astro/package.json
+++ b/frontend_web/astro/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.0.8",
     "bootstrap": "^5.3.3",
     "lucide-react": "^0.475.0",
+    "mdb-ui-kit": "^8.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.2.0",
