--- a/backend/AstroGlow/src/main/resources/application.properties
+++ b/backend/AstroGlow/src/main/resources/application.properties
@@ -1,17 +1,25 @@
-# application.properties
-spring.datasource.url=jdbc:mysql://localhost:3306/dbastroglow?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
+# Setup JDBC connection
+spring.datasource.url=jdbc:mysql://localhost:3306/dbastroglow?useSSL=false&serverTimezone=UTC
+
+# Setup datasource driver
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Setup database login credentials
 spring.datasource.username=root
 spring.datasource.password=password
 
+# Auto create tables based on entities
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.properties.hibernate.format_sql=true
 
-# Added to help diagnose entity scanning issues
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-logging.level.org.springframework.orm.jpa=DEBUG
+# Specify Hibernate dialect for MySQL
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
+# Disable open-in-view
+spring.jpa.open-in-view=false
+
+# Hide stack traces in error responses
 server.error.include-stacktrace=never
+
+spring.security.user.name=admin
+spring.security.user.password=password
