--- a/frontend_web/astro/package.json
+++ b/frontend_web/astro/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
     "@popperjs/core": "^2.11.8",
+    "@shadcn/ui": "^0.0.4",
     "@tailwindcss/vite": "^4.0.8",
     "bootstrap": "^5.3.3",
     "lucide-react": "^0.475.0",
@@ -35,6 +36,7 @@
     "postcss": "^8.5.3",
     "sass": "^1.86.0",
     "tailwindcss": "^4.0.8",
+    "typescript": "^5.8.2",
     "vite": "^6.1.0"
   }
 }
