--- a/frontend_mobile/astroglow/app/src/main/AndroidManifest.xml
+++ b/frontend_mobile/astroglow/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
-`<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
+    <!-- Allow WebView to access the internet -->
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:allowBackup="true"
@@ -12,14 +16,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Astroglow"
         tools:targetApi="31">
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Astroglow">
+            android:theme="@style/Theme.Astroglow"
+            android:hardwareAccelerated="true">  <!-- Improve WebView Performance -->
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
