--- a/frontend_web/astro/package.json
+++ b/frontend_web/astro/package.json
@@ -12,15 +12,20 @@
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
     "@popperjs/core": "^2.11.8",
+    "@reduxjs/toolkit": "^2.6.1",
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/vite": "^4.0.8",
+    "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
     "lucide-react": "^0.475.0",
     "mdb-ui-kit": "^8.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.2.0",
-    "react-router-dom": "^7.2.0"
+    "react-router-dom": "^7.2.0",
+    "swiper": "^11.2.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
