Updated playable song
can play song and upload mp3

--- a/backend/AstroGlow/src/main/resources/application.properties
+++ b/backend/AstroGlow/src/main/resources/application.properties
@@ -25,3 +25,17 @@ spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+# Max file upload size (for MP3 files)
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
+
+# Hibernate settings for larger LOB data
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.jdbc.batch_size=20
+spring.jpa.properties.hibernate.order_inserts=true
+
+# MySQL specific settings for large BLOB data
+spring.datasource.hikari.max-lifetime=580000
+spring.datasource.hikari.connection-timeout=60000
+spring.datasource.hikari.maximum-pool-size=10
+
