--- a/frontend_mobile/astroglow/app/src/main/AndroidManifest.xml
+++ b/frontend_mobile/astroglow/app/src/main/AndroidManifest.xml
@@ -6,16 +6,16 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/logo_foreground"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/logo_foreground"
         android:supportsRtl="true"
         android:theme="@style/Theme.Astroglow"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
+            android:label="AstroGlow"
             android:theme="@style/Theme.Astroglow">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,6 +23,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".AboutActivity"
+            android:exported="true"
+            android:label="About Us"
+            android:theme="@style/Theme.Astroglow" />
+        <activity
+            android:name=".CreateAccountActivity"
+            android:exported="true"
+            android:label="Create Account"
+            android:theme="@style/Theme.Astroglow" />
     </application>
 
 </manifest>
