--- a/frontend_mobile/astroglow/gradle/libs.versions.toml
+++ b/frontend_mobile/astroglow/gradle/libs.versions.toml
@@ -11,8 +11,13 @@ activityCompose = "1.8.0"
 composeBom = "2024.04.01"
 compose = "1.7.8"
 uiTextGoogleFonts = "1.7.8"
+compose_material_icons = "1.6.8"
+
 
 [libraries]
+androidx-material-icons-core = { group = "androidx.compose.material", name = "material-icons-core", version.ref = "compose_material_icons" }
+androidx-material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "compose_material_icons" }
+
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-ui-text-google-fonts = { module = "androidx.compose.ui:ui-text-google-fonts", version.ref = "uiTextGoogleFonts" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
