--- a/frontend_web/astro/package.json
+++ b/frontend_web/astro/package.json
@@ -13,7 +13,6 @@
     "@material-tailwind/react": "^2.1.10",
     "@popperjs/core": "^2.11.8",
     "@shadcn/ui": "^0.0.4",
-    "@tailwindcss/vite": "^4.0.8",
     "bootstrap": "^5.3.3",
     "firebase": "^11.6.0",
     "lucide-react": "^0.475.0",
@@ -25,10 +24,11 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@tailwindcss/postcss": "^4.1.3",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.20",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.19.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.0.0",
@@ -36,7 +36,7 @@
     "globals": "^15.14.0",
     "postcss": "^8.5.3",
     "sass": "^1.86.0",
-    "tailwindcss": "^4.0.8",
+    "tailwindcss": "^4.1.3",
     "typescript": "^5.8.2",
     "vite": "^6.1.0"
   }
