--- a/backend/AstroGlow/src/main/resources/application.properties
+++ b/backend/AstroGlow/src/main/resources/application.properties
@@ -1,5 +1,15 @@
 spring.application.name=AstroGlow
 
+# Server Configuration
+server.port=8080
+server.address=0.0.0.0
+
+# CORS Configuration
+spring.mvc.cors.allowed-origins=*
+spring.mvc.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.mvc.cors.allowed-headers=*
+spring.mvc.cors.allow-credentials=true
+
 spring.security.user.name=user
 spring.security.user.password=password
 
@@ -38,4 +48,8 @@ spring.jpa.properties.hibernate.order_inserts=true
 spring.datasource.hikari.max-lifetime=580000
 spring.datasource.hikari.connection-timeout=60000
 spring.datasource.hikari.maximum-pool-size=10
+
+# Logging Configuration
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=ERROR
 
