--- a/backend/AstroGlow/src/main/resources/application.properties
+++ b/backend/AstroGlow/src/main/resources/application.properties
@@ -5,17 +5,19 @@ server.port=8080
 server.address=0.0.0.0
 
 # CORS Configuration
-spring.mvc.cors.allowed-origins=*
+spring.mvc.cors.allowed-origins=http://localhost:3000,http://localhost:5173,http://localhost:5174,http://192.168.254.105:8080,astroglow://oauth/callback
 spring.mvc.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.mvc.cors.allowed-headers=*
 spring.mvc.cors.allow-credentials=true
+spring.mvc.cors.max-age=3600
 
 spring.security.user.name=user
 spring.security.user.password=password
 
 spring.security.oauth2.client.registration.github.client-id=Ov23liUVEHvp2o6bZLTH
 spring.security.oauth2.client.registration.github.client-secret=29b210459b6a40f74f5b31ffcaa1a90123077883
-spring.security.oauth2.client.registration.github.scope=read:user,user.email
+spring.security.oauth2.client.registration.github.scope=read:user,user:email
+spring.security.oauth2.client.registration.github.redirect-uri=http://192.168.254.105:8080/login/oauth2/code/github
 
 spring.security.oauth2.client.registration.google.client-id=617300925745-q8im6p2o4o27vujdtn6k6dr8varru3vi.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
@@ -52,4 +54,8 @@ spring.datasource.hikari.maximum-pool-size=10
 # Logging Configuration
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security.web=DEBUG
+logging.level.org.springframework.security.web.FilterChainProxy=DEBUG
+logging.level.org.springframework.security.oauth2=DEBUG
 
