--- a/frontend_mobile/astroglow/gradle/libs.versions.toml
+++ b/frontend_mobile/astroglow/gradle/libs.versions.toml
@@ -23,6 +23,8 @@ retrofit = "2.9.0"
 uiTextGoogleFonts = "1.7.8"
 compose_material_icons = "1.6.8"
 animationCoreLint = "1.8.0-rc03"
+media3CommonKtx = "1.6.1"
+media3Exoplayer = "1.6.1"
 
 
 [libraries]
@@ -59,6 +61,8 @@ play-services-auth = { module = "com.google.android.gms:play-services-auth", ver
 play-services-auth-v2070 = { module = "com.google.android.gms:play-services-auth", version.ref = "playServicesAuthVersion" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 androidx-animation-core-lint = { group = "androidx.compose.animation", name = "animation-core-lint", version.ref = "animationCoreLint" }
+androidx-media3-common-ktx = { group = "androidx.media3", name = "media3-common-ktx", version.ref = "media3CommonKtx" }
+androidx-media3-exoplayer = { group = "androidx.media3", name = "media3-exoplayer", version.ref = "media3Exoplayer" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
