Add to queue and search features

--- a/frontend_mobile/astroglow/app/src/main/AndroidManifest.xml
+++ b/frontend_mobile/astroglow/app/src/main/AndroidManifest.xml
@@ -64,6 +64,11 @@
             android:label="Search"
             android:theme="@style/Theme.Astroglow" />
         <activity
+            android:name=".SearchResultsActivity"
+            android:exported="false"
+            android:label="Search Results"
+            android:theme="@style/Theme.Astroglow" />
+        <activity
             android:name=".GitHubLoginActivity"
             android:exported="false"
             android:label="GitHub Login"
