--- a/backend/AstroGlow/src/main/resources/application.properties
+++ b/backend/AstroGlow/src/main/resources/application.properties
@@ -3,53 +3,55 @@ spring.application.name=AstroGlow
 # Server Configuration
 server.port=8080
 server.address=0.0.0.0
+server.servlet.context-path=/api
 
 # CORS Configuration
-spring.mvc.cors.allowed-origins=*
-spring.mvc.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
-spring.mvc.cors.allowed-headers=*
-spring.mvc.cors.allow-credentials=true
+spring.web.cors.allowed-origins=https://astroglow-6b0b3.web.app
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.web.cors.allowed-headers=*
+spring.web.cors.allow-credentials=true
 
-spring.security.user.name=user
+# Basic Spring Security login
+spring.security.user.name=root
 spring.security.user.password=password
 
+# OAuth2 Login
 spring.security.oauth2.client.registration.github.client-id=Ov23liUVEHvp2o6bZLTH
 spring.security.oauth2.client.registration.github.client-secret=29b210459b6a40f74f5b31ffcaa1a90123077883
 spring.security.oauth2.client.registration.github.scope=read:user,user.email
 
 spring.security.oauth2.client.registration.google.client-id=617300925745-q8im6p2o4o27vujdtn6k6dr8varru3vi.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
-spring.security.oauth2.client.registration.google.scope=profile, email
+spring.security.oauth2.client.registration.google.scope=profile,email
 
-# Setup JDBC connection
-spring.datasource.url=jdbc:mysql://localhost:3306/dbastroglow?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+# Default to development profile if not specified
+spring.profiles.active=dev
 
-# Setup datasource driver
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# Setup database login credentials
-spring.datasource.username=root
-spring.datasource.password=password
-
-# Auto create tables based on entities
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-
-# Max file upload size (for MP3 files)
+# File Upload
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
 
-# Hibernate settings for larger LOB data
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.properties.hibernate.jdbc.batch_size=20
-spring.jpa.properties.hibernate.order_inserts=true
+# Database Configuration
+spring.datasource.url=jdbc:mysql:///astroglow?cloudSqlInstance=astroglowfirebase-d2411:asia-southeast1:dbastroglow&socketFactory=com.google.cloud.sql.mysql.SocketFactory&user=root&password=admin123
+spring.datasource.username=root
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# MySQL specific settings for large BLOB data
-spring.datasource.hikari.max-lifetime=580000
-spring.datasource.hikari.connection-timeout=60000
-spring.datasource.hikari.maximum-pool-size=10
+# Add explicit database name for Cloud SQL
+spring.cloud.gcp.sql.database-name=dbastroglow
+spring.cloud.gcp.sql.instance-connection-name=astroglowfirebase-d2411:asia-southeast1:dbastroglow
+
+# JPA Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Logging Configuration
-logging.level.org.springframework.web=DEBUG
-logging.level.org.hibernate=ERROR
+logging.level.org.springframework=INFO
+logging.level.com.astroglow=DEBUG
+logging.level.org.hibernate=INFO
 
+# App Engine specific configuration
+spring.main.allow-bean-definition-overriding=true
+spring.jpa.open-in-view=false
