--- a/backend/AstroGlow/src/main/resources/application-prod.properties
+++ b/backend/AstroGlow/src/main/resources/application-prod.properties
@@ -17,5 +17,8 @@ spring.datasource.hikari.idle-timeout=300000
 spring.datasource.hikari.connection-timeout=20000
 spring.datasource.hikari.max-lifetime=1200000 
 
+# Disable Spring Cloud GCP SQL autoconfiguration
+spring.cloud.gcp.sql.enabled=false
+
 spring.cloud.gcp.sql.database-name=dbastroglow
 spring.cloud.gcp.sql.instance-connection-name=astroglowfirebase-d2411:asia-southeast1:dbastroglow
