--- a/backend/AstroGlow/pom.xml
+++ b/backend/AstroGlow/pom.xml
@@ -29,7 +29,26 @@
 	</scm>
 	<properties>
 		<java.version>17</java.version>
+		<spring-cloud-gcp.version>4.8.4</spring-cloud-gcp.version>
 	</properties>
+	<repositories>
+		<repository>
+			<id>google-cloud-sql</id>
+			<name>Google Cloud SQL</name>
+			<url>https://maven.google.com</url>
+		</repository>
+	</repositories>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>com.google.cloud</groupId>
+				<artifactId>spring-cloud-gcp-dependencies</artifactId>
+				<version>${spring-cloud-gcp.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -73,8 +92,14 @@
 		<dependency>
 			<groupId>com.google.cloud.sql</groupId>
 			<artifactId>mysql-socket-factory-connector-j-8</artifactId>
-			<version>1.15.1</version>
+			<version>1.14.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.google.cloud</groupId>
+			<artifactId>spring-cloud-gcp-starter</artifactId>
+		</dependency>
+
 
 	</dependencies>
 
