--- a/backend/AstroGlow/src/main/appengine/app.yaml
+++ b/backend/AstroGlow/src/main/appengine/app.yaml
@@ -5,6 +5,10 @@ env_variables:
   SPRING_PROFILES_ACTIVE: "prod"
   SPRING_CLOUD_GCP_SQL_DATABASE_NAME: "dbastroglow"
   SPRING_CLOUD_GCP_SQL_INSTANCE_CONNECTION_NAME: "astroglowfirebase-d2411:asia-southeast1:dbastroglow"
+  SPRING_DATASOURCE_URL: "jdbc:mysql:///dbastroglow?cloudSqlInstance=astroglowfirebase-d2411:asia-southeast1:dbastroglow&socketFactory=com.google.cloud.sql.mysql.SocketFactory&user=root&password=password"
+  SPRING_DATASOURCE_USERNAME: "root"
+  SPRING_DATASOURCE_PASSWORD: "password"
+  SPRING_DATASOURCE_DRIVER_CLASS_NAME: "com.mysql.cj.jdbc.Driver"
 
 automatic_scaling:
   target_cpu_utilization: 0.65
