--- a/backend/AstroGlow/src/main/resources/application-prod.properties
+++ b/backend/AstroGlow/src/main/resources/application-prod.properties
@@ -9,16 +9,31 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+spring.jpa.open-in-view=true
 
 # Connection Pool Configuration
-spring.datasource.hikari.maximum-pool-size=5
-spring.datasource.hikari.minimum-idle=1
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
 spring.datasource.hikari.idle-timeout=300000
 spring.datasource.hikari.connection-timeout=20000
-spring.datasource.hikari.max-lifetime=1200000 
+spring.datasource.hikari.max-lifetime=1200000
 
-# Disable Spring Cloud GCP SQL autoconfiguration
-spring.cloud.gcp.sql.enabled=false
-
+# Cloud SQL Configuration
+spring.cloud.gcp.sql.enabled=true
 spring.cloud.gcp.sql.database-name=dbastroglow
 spring.cloud.gcp.sql.instance-connection-name=astroglowfirebase-d2411:asia-southeast1:dbastroglow
+
+# Logging Configuration
+logging.level.org.springframework=INFO
+logging.level.com.astroglow=DEBUG
+logging.level.org.hibernate=INFO
+
+# Error Handling
+server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.include-stacktrace=never
+server.error.include-exception=false
+
+# Bean Configuration
+spring.main.allow-bean-definition-overriding=true
