--- a/backend/AstroGlow/src/main/resources/application.properties
+++ b/backend/AstroGlow/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8080
 server.address=0.0.0.0
 
 # CORS Configuration
-spring.web.cors.allowed-origins=https://astroglow-6b0b3.web.app
+spring.web.cors.allowed-origins=https://astroglow-6b0b3.web.app,http://localhost:3000,http://localhost:5173,http://localhost:5174
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
 spring.web.cors.allow-credentials=true
@@ -26,12 +26,19 @@ spring.security.oauth2.client.registration.google.scope=profile,email
 # Default to development profile if not specified
 spring.profiles.active=dev
 
-# File Upload
-spring.servlet.multipart.max-file-size=20MB
-spring.servlet.multipart.max-request-size=20MB
+# Error Handling
+server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.include-stacktrace=never
+server.error.include-exception=false
+
+# Bean Configuration
+spring.main.allow-bean-definition-overriding=true
+spring.jpa.open-in-view=true
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql:///astroglow?cloudSqlInstance=astroglowfirebase-d2411:asia-southeast1:dbastroglow&socketFactory=com.google.cloud.sql.mysql.SocketFactory&user=root&password=admin123
+spring.datasource.url=jdbc:mysql:///astroglow?cloudSqlInstance=astroglowfirebase-d2411:asia-southeast1:dbastroglow&socketFactory=com.google.cloud.sql.mysql.SocketFactory&user=root&password=password
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -50,7 +57,3 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 logging.level.org.springframework=INFO
 logging.level.com.astroglow=DEBUG
 logging.level.org.hibernate=INFO
-
-# App Engine specific configuration
-spring.main.allow-bean-definition-overriding=true
-spring.jpa.open-in-view=false
