--- a/frontend_web/astro/.env
+++ b/frontend_web/astro/.env
@@ -1,2 +1,2 @@
-# VITE_API_BASE_URL=http://localhost:8080/api 
-VITE_API_BASE_URL=https://astroglowfirebase-d2411.uc.r.appspotcom/api
+VITE_API_BASE_URL=http://localhost:8080/api 
+# VITE_API_BASE_URL=https://astroglowfirebase-d2411.uc.r.appspotcom/api
