--- a/backend/AstroGlow/src/main/resources/application-dev.properties
+++ b/backend/AstroGlow/src/main/resources/application-dev.properties
@@ -19,3 +19,23 @@ spring.datasource.hikari.max-lifetime=1200000
 
 spring.cloud.gcp.sql.database-name=dbastroglow
 spring.cloud.gcp.sql.instance-connection-name=astroglowfirebase-d2411:asia-southeast1:dbastroglow
+
+# OAuth2 Login Configuration for Local Development
+spring.security.oauth2.client.registration.google.client-id=550900944978-1se3kqfvh82mjl88l8sk9c8fntnn1lud.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=profile,email
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.provider=google
+
+# OAuth2 Provider Configuration
+spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/v2/auth
+spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
+spring.security.oauth2.client.provider.google.user-info-uri=https://openidconnect.googleapis.com/v1/userinfo
+spring.security.oauth2.client.provider.google.jwk-set-uri=https://www.googleapis.com/oauth2/v3/certs
+spring.security.oauth2.client.provider.google.user-name-attribute=sub
+
+# CORS Configuration for Local Development
+spring.web.cors.allowed-origins=http://localhost:5173,http://localhost:3000
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.web.cors.allowed-headers=*
+spring.web.cors.allow-credentials=true
