--- a/backend/AstroGlow/src/main/resources/application-prod.properties
+++ b/backend/AstroGlow/src/main/resources/application-prod.properties
@@ -37,3 +37,14 @@ server.error.include-exception=false
 
 # Bean Configuration
 spring.main.allow-bean-definition-overriding=true
+
+
+# OAuth2 Login
+spring.security.oauth2.client.registration.github.client-id=Ov23liUVEHvp2o6bZLTH
+spring.security.oauth2.client.registration.github.client-secret=29b210459b6a40f74f5b31ffcaa1a90123077883
+spring.security.oauth2.client.registration.github.scope=read:user,user.email
+
+spring.security.oauth2.client.registration.google.client-id=550900944978-1se3kqfvh82mjl88l8sk9c8fntnn1lud.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=profile,email
+
