--- a/backend/AstroGlow/src/main/resources/application.properties
+++ b/backend/AstroGlow/src/main/resources/application.properties
@@ -19,8 +19,8 @@ spring.security.oauth2.client.registration.github.client-id=Ov23liUVEHvp2o6bZLTH
 spring.security.oauth2.client.registration.github.client-secret=29b210459b6a40f74f5b31ffcaa1a90123077883
 spring.security.oauth2.client.registration.github.scope=read:user,user.email
 
-spring.security.oauth2.client.registration.google.client-id=617300925745-q8im6p2o4o27vujdtn6k6dr8varru3vi.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.client-id=550900944978-1se3kqfvh82mjl88l8sk9c8fntnn1lud.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=profile,email
 
 # Default to development profile if not specified
@@ -57,3 +57,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 logging.level.org.springframework=INFO
 logging.level.com.astroglow=DEBUG
 logging.level.org.hibernate=INFO
+
+# JWT Configuration
+jwt.secret=your-secret-key-here-make-it-long-and-secure
+jwt.expiration=86400 # 24 hours in seconds
